# ZhvRender

./: CMakeLists.txt  LICENSE  README.md  setup.sh
include/glad/: glad.h
src/: GuiApplication.cpp  GuiApplication.h  Render.cpp  Render.h  Shader.cpp  Shader.h  glad.c  main.cpp
src/GLSL/: fragment.fs  vertex.vs
